force-app/Base/main/default/objects/Course_Attendee__c/Course_Attendee__c.object-meta.xml
<CustomObject>
	<description>Used to track a student who attends a course.</description>
	<label>Course Attendee</label>
	<nameField>
		<displayFormat>ATTENDEE-{00000}</displayFormat>
		<label>Course Attendee Number</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Course Attendees</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>