force-app/Base/main/default/objects/Course_Attendee__c/fields/Course_Delivery__c.field-meta.xml
<CustomField>
	<fullName>Course_Delivery__c</fullName>
	<description>Course delivery that student is attending.</description>
	<label>Course Delivery</label>
	<referenceTo>Course_Delivery__c</referenceTo>
	<relationshipLabel>Course Attendees</relationshipLabel>
	<relationshipName>Course_Attendees</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<reparentableMasterDetail>true</reparentableMasterDetail>
	<type>MasterDetail</type>
</CustomField>