force-app/Base/main/default/objects/Course_Attendee__c/fields/InstructorNotes__c.field-meta.xml
<CustomField>
	<fullName>InstructorNotes__c</fullName>
	<label>Instructor Notes</label>
	<length>32768</length>
	<type>Html</type>
</CustomField>