force-app/Base/main/default/objects/Course_Attendee__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<description>Status of course attendee.</description>
	<inlineHelpText>Enrolled - Student is enrolled in course delivery.
Completed - Student attended course delivery.
Course Cancelled - AW Computing cancelled course delivery.
No Show - Student did not show up for course delivery.</inlineHelpText>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Enrolled</fullName>
			</value>
			<value>
				<fullName>Completed</fullName>
			</value>
			<value>
				<fullName>Course Cancelled</fullName>
			</value>
			<value>
				<fullName>No Show</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>