force-app/Base/main/default/objects/Course_Attendee__c/fields/Student__c.field-meta.xml
<CustomField>
	<fullName>Student__c</fullName>
	<description>Contact who is attending the course delivery.</description>
	<label>Student</label>
	<lookupFilter>
		<active>true</active>
		<filterItems>
			<field>Contact.RecordTypeId</field>
			<operation>equals</operation>
			<value>Technician</value>
		</filterItems>
		<isOptional>false</isOptional>
	</lookupFilter>
	<referenceTo>Contact</referenceTo>
	<relationshipLabel>Course Attendees</relationshipLabel>
	<relationshipName>Course_Attendees</relationshipName>
	<relationshipOrder>1</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>